fix(editor): tighten spacing of bullet points

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -133,6 +133,12 @@
     color: inherit !important;
   }
 
+  /* Added to fix bullet point spacing */
+  .prose .ProseMirror ul li,
+  .prose .ProseMirror ol li {
+    margin-block: 0 !important;
+  }
+
   /* This was added to fix the line-height issue with TipTap */
   .prose .ProseMirror p.line-height-target {
     margin-block: 0 !important;
